2014-05-29
	1. Added support sbg4 module with kernel 3.12.11.